# partikel

./: .gitignore  CMakeLists.txt  README.md  debug.sh  run.sh
shader/: billboard.geom  billboard_uv.geom  debug_grid.fs  draw_line.vert  flatshade.frag  particle.vert  real_grid.vert  tex_shade.frag  triangle_test.fs  triangle_test.gs  triangle_test.vs
src/: gitid_template.cpp  main.cpp
src/compute/: computeMain.cpp  computeMain.hpp  gpuSort.cpp  gpuSort.hpp  opencl.hpp
src/dependencies/: stb_image.cpp
src/opencl/: BitonicSort_b.cl  RadixSort32Kernels.cl  collision.cl  display.cl  hello.cl  particle.cl  particle.h
src/render/: colors.cpp  colors.hpp  displayGrid.cpp  displayGrid.hpp  displayParticle.cpp  displayParticle.hpp  init.cpp  init.hpp  opengl.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertexArray.cpp  vertexArray.hpp  window.cpp  window.hpp
src/sim/: grid.cpp  grid.hpp  mgsolve.cpp  mgsolve.hpp  particle.cpp  particle.hpp  pressure.cpp  pressure.hpp  semilagrange.cpp  semilagrange.hpp
src/tools/: log.cpp  log.hpp  vectors.hpp
